# GPA-Teleoperation

./: README.md
devel/: .catkin  local_setup.sh
devel/include/local_sensing_node/: local_sensing_nodeConfig.h
devel/include/quadrotor_msgs/: AuxCommand.h  Corrections.h  Gains.h  GoalSet.h  LQRTrajectory.h  Odometry.h  OutputData.h  PPROutputData.h  PolynomialTrajectory.h  PositionCommand.h  SO3Command.h  Serial.h  StatusData.h  TRPYCommand.h
devel/include/traj_utils/: DataDisp.h  MINCOTraj.h  PolyTraj.h
devel/lib/assign_goals/: assign_goals_node
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/map_generator/: random_forest
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: assign_goals.pc  drone_detect.pc  gaze_sim.pc  gpa_teleop.pc  local_sensing_node.pc  map_generator.pc  mockamap.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  poscmd_2_odom.pc  pose_utils.pc  quadrotor_msgs.pc  random_goals.pc  rviz_plugins.pc  selected_points_publisher.pc  so3_control.pc  so3_quadrotor_simulator.pc  topo_path_search.pc  traj_opt.pc  traj_utils.pc  uav_utils.pc
devel/lib/poscmd_2_odom/: poscmd_2_odom
devel/lib/random_goals/: random_goals_node
devel/lib/so3_control/: control_example
devel/lib/topo_path_search/: topo_point_node
src/assisted_planner/src/planner/topo_path_search/: CMakeLists.txt
src/assisted_planner/src/planner/topo_path_search/include/: cluster.h  topo_point.h
src/assisted_planner/src/planner/topo_path_search/src/: cluster.cpp  topo_point.cpp  topo_point_node.cpp
src/gaze_sim/: gaze_sim.py
(+107 files in other folders)
